Fixed issues where the hand was too large and off centered on mobile viewports

--- a/duck.css
+++ b/duck.css
@@ -5,7 +5,19 @@
  align-items: center;
 }
 
+.center {
+    align-items: center;
+}
+
 .handPattingCSS {
  position: absolute;
- top: 100px;
+ top: 50px;
 }
+
+@media  (max-width: 600px) {
+   .smallHand {
+    width: 70px;
+    height: 70px;
+   }
+}
+
